# Kinect2Sample

./: HOWTOBUILD.md  LICENSE  README.md
.github/: FUNDING.yml
Sample/: License.txt  ReadMe.txt  Sample.sln  Sapmle.props
Sample/AudioBeam/: AudioBeam.cpp  AudioBeam.vcxproj  stdafx.cpp
Sample/AudioBody/: AudioBody.cpp  AudioBody.vcxproj  stdafx.cpp
Sample/Body/: Body.cpp  Body.vcxproj  stdafx.cpp
Sample/BodyIndex/: BodyIndex.cpp  BodyIndex.vcxproj  stdafx.cpp
Sample/Color/: Color.cpp  Color.vcxproj  stdafx.cpp
Sample/Controls/: Controls.cpp  Controls.vcxproj  Controls.vcxproj.filters  ReadMe.txt  stdafx.cpp
Sample/CoodinateMapper/: CoodinateMapper.cpp  CoodinateMapper.vcxproj  stdafx.cpp
Sample/Depth/: Depth.cpp  Depth.vcxproj  stdafx.cpp
Sample/Event/: Event.cpp  Event.vcxproj  stdafx.cpp
Sample/Face/: Face.cpp  Face.vcxproj  stdafx.cpp
Sample/Fusion/: Fusion.cpp  Fusion.vcxproj  KinectFusionHelper.cpp  KinectFusionHelper.h  stdafx.cpp
Sample/Gesture/: Gesture.cpp  Gesture.vcxproj  HandUp.gba  Swipe.gba  stdafx.cpp
Sample/HDFace/: HDFace.cpp  HDFace.vcxproj  stdafx.cpp
Sample/Infrared/: Infrared.cpp  Infrared.vcxproj  stdafx.cpp
Sample/LongExposureInfrared/: LongExposureInfrared.cpp  LongExposureInfrared.vcxproj  stdafx.cpp
Sample/Speech/: KinectAudioStream.cpp  KinectAudioStream.h  Speech.cpp  Speech.vcxproj  SpeechRecognition.grxml  stdafx.cpp
sample/: CMakeLists.txt
sample/AudioBeam/: CMakeLists.txt  app.cpp  app.h
sample/AudioBody/: CMakeLists.txt  app.cpp  app.h  main.cpp
sample/Body/: CMakeLists.txt  app.cpp  app.h
sample/BodyIndex/: CMakeLists.txt  app.cpp  app.h
sample/ChromaKey/: CMakeLists.txt  app.cpp  app.h
sample/Color/: CMakeLists.txt  app.cpp  app.h
sample/CoordinateMapper/: CMakeLists.txt  app.cpp  app.h
sample/Depth/: CMakeLists.txt  app.cpp  app.h
sample/Face/: CMakeLists.txt  app.cpp  app.h
sample/FaceClip/: CMakeLists.txt  app.cpp  app.h
sample/FaceRecognition/: CMakeLists.txt  app.cpp  app.h
sample/Fusion/: CMakeLists.txt  KinectFusionHelper.cpp  KinectFusionHelper.h  app.cpp  app.h
sample/Gesture/: CMakeLists.txt  app.cpp  app.h
sample/HDFace/: CMakeLists.txt  app.cpp  app.h
sample/Infrared/: CMakeLists.txt  app.cpp  app.h
sample/Inpaint/: CMakeLists.txt  app.cpp  app.h  util.h
sample/JointSmooth/: CMakeLists.txt  KinectJointFilter.cpp  KinectJointFilter.h  app.cpp  app.h
sample/MultiSource/: CMakeLists.txt  app.cpp  app.h
sample/PointCloud/: CMakeLists.txt  app.cpp  app.h
sample/Speech/: CMakeLists.txt  FindSpeechPlatformSDK.cmake  Grammar_enUS.grxml  Grammar_jaJP.grxml  KinectAudioStream.cpp  KinectAudioStream.h  app.cpp  app.h
